fix node list alignment

--- a/src/assets/css/sass/_proposal.scss
+++ b/src/assets/css/sass/_proposal.scss
@@ -375,6 +375,9 @@ node list..
 
     &__column {
       width: 48%;
+      @include respond-below(lg) {
+        width: 50%;
+      }
       display: flex;
       flex-direction: column;
     }
@@ -398,6 +401,9 @@ node list..
         flex-direction: column;
       }
       &__left {
+        @include respond-below(lg) {
+          margin-left: 8px;
+        }
         & p {
           text-align: left;
           margin-bottom: 0px;
@@ -412,7 +418,10 @@ node list..
       }
 
       &__right {
-        margin-left: 8px;
+        @include respond-below(lg) {
+          margin-left: 8px;
+          margin-right: 4px;
+        }
         @include respond-below(sm) {
           margin-top: 18px;
         }
@@ -425,7 +434,7 @@ node list..
           display: flex;
           justify-content: space-between;
           align-items: center;
-          min-width: 98px;
+          min-width: 108px;
         }
       }
     }
@@ -531,6 +540,14 @@ node list..
 }
 
 button {
+  // &:disabled {
+  //   color: #9ca7b0 !important;
+  //   background-color: #fff !important;
+  //   border: 1px solid #9ca7b0;
+  //   img {
+  //     fill: #9ca7b0 !important;
+  //   }
+  // }
   &:disabled {
     color: #fff;
     background-color: #9ca7b0 !important;
